--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
       enabled: true
 
   datasource:
-    url : jdbc:mysql://172.30.1.59:3307/gogs?zeroDateTimeBehavior=convertToNull&useSSL=false&verifyServerCertificate=false&useUnicode=true&characterEncoding=utf8&autoReconnection=true
+    url : jdbc:mysql://rtbox.synology.me:3307/gogs?zeroDateTimeBehavior=convertToNull&useSSL=false&verifyServerCertificate=false&useUnicode=true&characterEncoding=utf8&autoReconnection=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: returnBox!1016
