--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,10 @@ spring:
       enabled: true
 
   datasource:
-    url : jdbc:mysql://rtbox.synology.me:3307/gogs?zeroDateTimeBehavior=convertToNull&useSSL=false&verifyServerCertificate=false&useUnicode=true&characterEncoding=utf8&autoReconnection=true
+    url: jdbc:mysql://database-container:3306/testpro?zeroDateTimeBehavior=convertToNull&useSSL=true&verifyServerCertificate=false&useUnicode=true&characterEncoding=utf8
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: returnBox!1016
+    username: mysql_user
+    password: mysql_password
 
   jpa:
     hibernate:
